<resources>
    <string name="app_name">Keabadian</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="owner_name">MUHAMMAD JUZAIRI SAFITLI</string>
    <string name="original_made_by">ORIGINAL MADE BY:</string>
    <string name="dicoding_submission">DICODING SUBMISSION</string>
    <string name="keabadian">KEABADIAN</string>
    <string name="selamat_datang_di">SELAMAT DATANG DI</string>
    <string name="judul_konten">Judul Konten</string>
    <string name="lokasi_konten">Lokasi Konten</string>
    <string name="tanggal_konten">Tanggal Konten</string>
    <string name="cerita_konten">Cerita Konten</string>
    <string name="kepergian_yang_diwarnai_oleh_ketidakpastian_dan_kegelapan_menggambarkan_perjalanan_akhir_yang_penuh_misteri">Kepergian yang diwarnai oleh ketidakpastian dan kegelapan, menggambarkan perjalanan akhir yang penuh misteri.</string>
    <string name="mari_bercerita">MARI BERCERITA</string>
    <string name="tulis_namamu_di_sini">Tulis namamu di sini</string>
    <string name="ayo_mulai">AYO MULAI!</string>
    <string name="sebelum_bercerita_n_siapa_nama_mu">Sebelum bercerita\n siapa nama mu?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="perjumpaan_yang_abadi_dengan_maut_mengulas_tentang_takdir_dan_perjalanan_menuju_keabadian">perjumpaan yang abadi dengan maut, mengulas tentang takdir dan perjalanan menuju keabadian.</string>
    <string name="sugeng_rawuh">Sugeng Rawuh,</string>
    <string name="deskripsi_konten">Deskripsi Konten</string>
    <string name="judul_konten_row">Judul Konten</string>
    <string name="lokasi_konten_row">Lokasi Konten</string>
    <string name="tanggal_konten_row">Tanggal Konten</string>
    <string name="dalam_list">Dalam List</string>
    <string name="dalam_grid">Dalam Grid</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="profil">PROFIL</string>
    <string name="muhammad_juzairi_safitli">Muhammad Juzairi Safitli</string>
    <string name="airiagustus82_gmail_com">airiagustus82@gmail.com</string>
    <string name="terima_kasih_dicoding_team_perjalanan_yang_seru_rasanya_saya_bisa_belajar_banyak_terkait_android_di_sini">Terima kasih, Dicoding Team! Perjalanan yang seru rasanya saya bisa belajar banyak terkait Android di sini! :) \n\n Terima Kasih @EkaMelisaa, Atas Bantuannya Telah Membantu Saya Mendesain Aplikasi Ini! :D</string>
    <string-array name="data_title_horror_content">
        <item>Tirai dan Perempuan Merah</item>
        <item>Rumah Sakit Bekas Perang di Desaku</item>
        <item>Tangan Itu Melihatku Tidur</item>
        <item>Boneka Hantu</item>
        <item>Boneka Robotic Berhantu</item>
        <item>Dapur Pembunuh Berantakan</item>
        <item>Ruangan Terlupakan, Bekas Sarang Preman</item>
        <item>Kota Hantu Seram</item>
        <item>Kota Jelangkung</item>
        <item>Kuburan Keramat Pak Mamat</item>
    </string-array>
    <string-array name="data_photo_horror_content">
        <item>@drawable/konten1</item>
        <item>@drawable/konten2</item>
        <item>@drawable/konten3</item>
        <item>@drawable/konten4</item>
        <item>@drawable/konten5</item>
        <item>@drawable/konten6</item>
        <item>@drawable/konten7</item>
        <item>@drawable/konten8</item>
        <item>@drawable/konten9</item>
        <item>@drawable/konten10</item>
    </string-array>
    <string-array name="data_date_horror_content">
        <item>19 Agustus 2023</item>
        <item>21 Februari 2021</item>
        <item>11 Januari 2023</item>
        <item>30 September 2024</item>
        <item>2 Februari 2020</item>
        <item>8 Agustus 2011</item>
        <item>2 Maret 2019</item>
        <item>18 Januari 2017</item>
        <item>21 Oktober 2012</item>
        <item>23 April 2022</item>
    </string-array>
    <string-array name="data_location_horror_content">
        <item>Jambi</item>
        <item>Padang</item>
        <item>Palembang</item>
        <item>Medan</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Bandung</item>
        <item>Aceh</item>
        <item>Papua</item>
        <item>Kalimantan</item>
    </string-array>
</resources>