<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_keabadian">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Your existing layout content goes here -->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="263dp"
            android:layout_height="263dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mexican_skull_rafiki" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/unica_one_regular"
            android:text="@string/mari_bercerita"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="301dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_text"
            android:ems="10"
            android:fontFamily="@font/unica_one_regular"
            android:hint="@string/tulis_namamu_di_sini"
            android:inputType="text"
            android:paddingLeft="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/button_move_with_name"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_opening"
            android:fontFamily="@font/unica_one_regular"
            android:hapticFeedbackEnabled="true"
            android:text="@string/ayo_mulai"
            android:textColor="@color/white"
            android:textColorLink="@color/button_colour_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/unica_one_regular"
            android:text="@string/sebelum_bercerita_n_siapa_nama_mu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
