<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:padding="7dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#313236"
        android:padding="8sp"
        android:paddingTop="0sp">


        <TextView
            android:id="@+id/storyContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/deskripsi_konten"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/contentPhoto"
            app:layout_constraintEnd_toEndOf="@id/titleContent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/titleContent"
            app:layout_constraintTop_toBottomOf="@+id/titleContent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/titleContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/judul_konten_row"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/contentPhoto"
            app:layout_constraintTop_toTopOf="@+id/contentPhoto" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/contentPhoto"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173"
            app:shapeAppearance="@style/RoundedSquare"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/contentPhoto"
            app:layout_constraintTop_toBottomOf="@+id/contentPhoto"
            app:srcCompat="@drawable/location_icon" />

        <TextView
            android:id="@+id/locationContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lokasi_konten_row"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/calendar_icon" />

        <TextView
            android:id="@+id/dateContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/tanggal_konten_row"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/locationContent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>