<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_keabadian"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/photoDetailContent"
            app:layout_constraintTop_toBottomOf="@+id/titleDetailContent"
            app:srcCompat="@drawable/location_icon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photoDetailContent"
            android:layout_width="175dp"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedSquare"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleDetailContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/judul_konten"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photoDetailContent"
            app:layout_constraintTop_toTopOf="@+id/photoDetailContent" />

        <TextView
            android:id="@+id/locationDetailContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lokasi_konten"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/photoDetailContent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/calendar_icon" />

        <TextView
            android:id="@+id/dateDetailContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tanggal_konten"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/storyDetailContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/cerita_konten"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoDetailContent" />

        <ImageButton
            android:id="@+id/loveButton"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="2dp"
            android:background="@color/black_keabadian"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/photoDetailContent"
            app:layout_constraintStart_toEndOf="@+id/photoDetailContent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/heart" />

        <ImageButton
            android:id="@+id/action_share"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="32dp"
            android:background="@color/black_keabadian"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/loveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/loveButton"
            app:layout_constraintTop_toTopOf="@+id/loveButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/send" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>